--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,8 @@
-name: CI
 
-on: [push, pull_request]
-
-jobs:
-  build:
-    name: JDK ${{ matrix.java_version }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java_version: [1.8]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Gradle Wrapper Validation
+        java_version: 
         uses: gradle/wrapper-validation-action@v1
       - name: Install JDK ${{ matrix.java_version }}
         uses: actions/setup-java@v1
@@ -21,5 +11,4 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean check --stacktrace
       - name: Upload snapshot (main only)
-        run: ./gradlew uploadArchives -PSONATYPE_NEXUS_USERNAME=${{ secrets.SonatypeUsername }} -PSONATYPE_NEXUS_PASSWORD=${{ secrets.SonatypePassword }}
-        if: success() && github.ref == 'refs/heads/main' && github.event_name != 'pull_request' && matrix.java_version == '1.8'
+        run: ./gradlew uploadArchives -PSONATYPE_NEXUS_USERNAME/main' && github.event_name != 'pull_request' && matrix.java_version == '1.8'
